--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 <head>
-<title>Hello React!</title>
-<!-- 不需要 JSXTransformer！ -->
+  <meta charset="UTF-8">
+  <title>Hello React!</title>
+  <!-- 不需要 JSXTransformer！ -->
 </head>
 <body>
-<div id="example"></div>
-</body>
+  <div id="example">
+
+  </div>
+</body style="margin:0px;border:0px">
 <script src="./assets/js/common.js"></script>
 <script src="./assets/js/enter.bundle.js"></script>
 </html>
